test/link/script-num-fmt.link
ROM0
	org 4_2
	org %10_10_10
	org &52_ ; trailing '_'
	org $2A_ ; trailing '_'
	org 0b101__010 ; '_' after another '_'
	org 0o__5_2 ; '_' after another '_'
	org 0x2_A
	org 41 ; different value
	org %_ ; no digits
	org 0x__ ; no digits
